# OPL-PC-Tools

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.debian  NOTES.txt  PlayStation 2 Memory Card File System.html  README.md  make-release-debian.sh  make-release-linux.sh  oplpctools.pro  qpcopl.pro
depends/include/cdio/: cd_types.h  cdio_config.h  mmc.h  mmc_cmds.h  mmc_hl_cmds.h  mmc_ll_cmds.h  mmc_util.h  version.h
icons/Breeze/: index.theme
icons/Breeze Dark/: index.theme
icons/Tango/: index.theme
imhex/: ulconfig.hexpat  vmc.hexpat  ziso.hexpat
release/: make-release-linux.sh
release/assets/linux/: make-desktop-file.sh  oplpctools.sh
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  BinCueDeviceSource.cpp  BinCueDeviceSource.h  BinaryFile.cpp  BinaryFile.h  ChooseOpticalDiscDialog.cpp  ChooseOpticalDiscDialog.h  ChooseOpticalDiscDialog.ui  Device.cpp  Device.h  DeviceSource.h  Device_FreeBSD.cpp  Device_Linux.cpp  Device_MacOSX.cpp  Device_Windows.cpp  DirectoryGameInstaller.cpp  DirectoryGameInstaller.h  Exception.h  Flags.h  Game.cpp  Game.h  GameCollection.cpp  GameCollection.h  GameInstallDialog.cpp  GameInstallDialog.h  GameInstallDialog.ui  GameInstallThread.h  GameInstallationTask.h  GameInstallationType.h  GameInstaller.cpp  GameInstaller.h  GameInstallerSource.cpp  GameInstallerSource.h  GameRenameDialog.cpp  GameRenameDialog.h  GameRenameDialog.ui  GameRepository.cpp  GameRepository.h  (+44 more)
src/CDIO/: Device.cpp  Device.h  Device_Linux.cpp  Iso9660Image.cpp
src/OplPcTools/: ApplicationInfo.h  BigEndian.h  BinCueDeviceSource.cpp  BinCueDeviceSource.h  CompressedDeviceWriter.cpp  CompressedDeviceWriter.h  Constants.h  DefaultDeviceWriter.cpp  DefaultDeviceWriter.h  Device.cpp  Device.h  DeviceReader.cpp  DeviceReader.h  DeviceSource.h  DeviceWriter.h  Device_FreeBSD.cpp  Device_Linux.cpp  Device_MacOSX.cpp  Device_Windows.cpp  DirectoryGameInstaller.cpp  DirectoryGameInstaller.h  DirectoryGameStorage.cpp  DirectoryGameStorage.h  Endianness.h  Exception.h  File.cpp  File.h  FilenameValidator.cpp  FilenameValidator.h  Game.h  GameArt.cpp  GameArt.h  GameArtFileSource.h  GameArtManager.cpp  GameArtManager.h  GameArtNetworkSource.cpp  GameArtNetworkSource.h  GameArtSource.h  GameCheat.cpp  GameCheat.h  (+70 more)
src/OplPcTools/Core/: BinCueDeviceSource.cpp  BinCueDeviceSource.h  Device.cpp  Device.h  Device_FreeBSD.cpp  Device_Linux.cpp  Device_MacOSX.cpp  Device_Windows.cpp  DirectoryGameInstaller.cpp  DirectoryGameInstaller.h  DirectoryGameStorage.cpp  DirectoryGameStorage.h  Exception.h  File.h  Game.cpp  Game.h  GameArtManager.cpp  GameArtManager.h  GameCollection.cpp  GameCollection.h  GameInstallationType.h  GameInstaller.cpp  GameInstaller.h  GameStorage.cpp  GameStorage.h  IOException.h  Iso9660DeviceSource.h  IsoRecoverer.cpp  IsoRecoverer.h  IsoRestorer.cpp  IsoRestorer.h  Maybe.h  MediaType.h  OpticalDriveDeviceSource.cpp  OpticalDriveDeviceSource.h  Settings.cpp  Settings.h  UlConfigGameInstaller.cpp  UlConfigGameInstaller.h  UlConfigGameStorage.cpp  (+2 more)
src/OplPcTools/Device/: BinCueDeviceSource.cpp  BinCueDeviceSource.h  CompressedDeviceWriter.cpp  CompressedDeviceWriter.h  DefaultDeviceWriter.cpp  DefaultDeviceWriter.h  DeviceReader.cpp  DeviceReader.h  DeviceSource.h  DeviceWriter.h  Device_Linux.cpp  Device_MacOSX.cpp  Iso9660DeviceSource.h  NrgDeviceSource.cpp  NrgDeviceSource.h  OpticalDriveDeviceSource.cpp  OpticalDriveDeviceSource.h  UlDeviceSource.cpp  UlDeviceSource.h  ZisoDeviceSource.cpp  ZisoDeviceSource.h  Zso.cpp  ZsoDeviceSource.cpp  ZsoDeviceSource.h
src/OplPcTools/MCFS/: FATEntry.h  FATable.cpp  FATable.h  FSDateTime.h  FSEntry.h  FileSystemDriver.cpp  FileSystemDriver.h  MCFSException.h  Path.h  Superblock.h  VmcFormatter.cpp  VmcFormatter.h
src/OplPcTools/MemoryCard/: DateTime.h  FATEntry.h  FATable.cpp  FATable.h  FSEntry.h  FSEntryNameValidator.cpp  FSEntryNameValidator.h  FileSystem.cpp  FileSystem.h  MCFSException.h  Path.h  Superblock.h  VmcFormatter.cpp  VmcFormatter.h
src/OplPcTools/Misc/: IOException.h  LambdaThread.h  Settings.cpp  ValidationException.h
src/OplPcTools/Resources/: Resources.qrc  Resources.rc
src/OplPcTools/Resources/icons/: scale.sh
src/OplPcTools/Resources/icons/oplpct/: index.theme
src/OplPcTools/Resources/icons/oplpct-dark/: index.theme
src/OplPcTools/Translations/: oplpctools_pt.ts  oplpctools_ru.ts
src/OplPcTools/UI/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AcceptCheatDialog.cpp  AcceptCheatDialog.h  AcceptCheatDialog.ui  Activity.h  Application.cpp  Application.h  BusyDialog.cpp  BusyDialog.h  BusyDialog.ui  BusySmartThread.cpp  BusySmartThread.h  ChooseImportGamesDialog.cpp  ChooseImportGamesDialog.h  ChooseImportGamesDialog.ui  ChooseOpticalDiscDialog.cpp  ChooseOpticalDiscDialog.h  ChooseOpticalDiscDialog.ui  ChooseUlGamesDialog.cpp  ChooseUlGamesDialog.h  ChooseUlGamesDialog.ui  ClickableLabel.h  DisplayUtils.cpp  DisplayUtils.h  GameArtDownloaderActivity.cpp  GameArtDownloaderActivity.h  GameArtDownloaderActivity.ui  GameArtsWidget.cpp  GameArtsWidget.h  GameArtsWidget.ui  GameCheatWidget.cpp  GameCheatWidget.h  GameCheatWidget.ui  GameCollectionActivity.cpp  GameCollectionActivity.h  GameCollectionActivity.ui  GameCollectionWidget.cpp  GameCollectionWidget.h  (+84 more)
src/OplPcTools/VMC/: VmcDriver.cpp  VmcDriver.h  VmcFileManager.cpp  VmcFileManager.h
src/Resources/misc/: icon-mask.xbm
src/Translations/: oplpctools_ru.ts
translations/: oplpctools_ru.ts  qpcopl_ru.qm  qpcopl_ru.ts
